namespaces/live-1.cloud-platform.service.justice.gov.uk/prison-services-feedback-and-support-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prison-services-feedback-and-support-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "dps_core"
    cloud-platform.justice.gov.uk/application: "Prison services feedback and support"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/prison-services-feedback-and-support.git"
    cloud-platform.justice.gov.uk/team-name: "dps-core"
